--- a/style_normal.css
+++ b/style_normal.css
@@ -52,6 +52,16 @@ td.double {
     vertical-align:center;
 }
 
+td.denied {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background: #FA5858;
+    background: url(accden.png) center center no-repeat;
+    border: 1px solid #DDD;
+    text-align:center;
+    vertical-align:center;
+}
+
 td {
     padding: 0.5em 0.5em;
     text-align: center;
