--- a/style_normal.css
+++ b/style_normal.css
@@ -1,11 +1,23 @@
 table {
-margin: 8px;
+    margin: 8px;
 }
 
 th {
     font-family: Arial, Helvetica, sans-serif;
     font-size: .8em;
     background: #666;
+    color: #FFF;
+    padding: 2px 6px;
+    border-collapse: separate;
+    border: 1px solid #000;
+    text-align:center;
+    vertical-align: middle;
+}
+
+th.led {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .8em;
+    background: url(led.png) center right no-repeat;
     color: #FFF;
     padding: 2px 6px;
     border-collapse: separate;
