--- a/style_normal.css
+++ b/style_normal.css
@@ -13,17 +13,36 @@ th {
     text-align:center;
     vertical-align: middle;
 }
-
-th.led {
+th.logline {
     font-family: Arial, Helvetica, sans-serif;
     font-size: .8em;
-    background: url(led.png) center right no-repeat;
-    color: #FFF;
+    color: #FFF
     padding: 2px 6px;
     border-collapse: separate;
     border: 1px solid #000;
     text-align:center;
     vertical-align: middle;
+}
+
+th.led {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .8em;
+    background: url(led.png) center right no-repeat;
+    padding: 2px 6px;
+    border-collapse: separate;
+    border: 1px solid #000;
+    text-align:center;
+    vertical-align: middle;
+}
+
+td {
+    padding: 0.5em 0.5em;
+    text-align: center;
+    margin-left: 10px;
+    background: linear-gradient(to left, transparent 50%, #1F7DE2 50%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all 0.6s ease-in;
 }
 
 td.ONLINE {
@@ -72,16 +91,6 @@ td.denied {
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
-}
-
-td {
-    padding: 0.5em 0.5em;
-    text-align: center;
-    margin-left: 10px;
-    background: linear-gradient(to left, transparent 50%, #1F7DE2 50%), linear-gradient(#F7f7f7, #EEE);
-    background-size: 200% 100%;
-    background-position: right bottom;
-    transition: all 0.6s ease-in;
 }
 
 td.lastheard {
