--- a/style_normal.css
+++ b/style_normal.css
@@ -1,31 +1,46 @@
 table {
-    margin: 8px;
+    margin: 0px;
 }
 
 th {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .8em;
+    font-size: 1em;
     background: #666;
     color: #FFF;
-    padding: 2px 6px;
+    padding: 0em 1.5em;
     border-collapse: separate;
-    border: 1px solid #000;
+    border: 0px solid #000;
     text-align:center;
     vertical-align: middle;
 }
-th.logline {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .8em;
-    color: #FFF
-    padding: 2px 6px;
+/* smaal state row*/
+th.state {
+    font-size: 1em;
+    background: #666;
+    color: #FFF;
+    padding: 0em;
+    width: 40px;
     border-collapse: separate;
-    border: 1px solid #000;
+    border: 0px solid #000;
+    text-align:center;
+    vertical-align: middle;
+}
+td.tx {
+    padding: 0em;
+    font-size: 20px;
+    background: #FA5858;
+    background: url(tx.gif) center center no-repeat;
+    border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
 }
 
+th.logline {
+    border: 2px;
+    padding: 2px;
+}
+
 th.led {
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0em;
     font-size: .8em;
     background: url(led.png) center right no-repeat;
     padding: 2px 6px;
@@ -35,46 +50,8 @@ th.led {
     vertical-align: middle;
 }
 
-td {
-    padding: 0.5em 0.5em;
-    text-align: center;
-    margin-left: 10px;
-    background: linear-gradient(to left, transparent 50%, #1F7DE2 50%), linear-gradient(#F7f7f7, #EEE);
-    background-size: 200% 100%;
-    background-position: right bottom;
-    transition: all 0.6s ease-in;
-}
-
-td.ONLINE {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .8em;
-    background: #58FA58;
-    border: 1px solid #DDD;
-    text-align:center;
-    vertical-align: middle;
-}
-
-td.offline {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .8em;
-    background: #BDBDBD;
-    border: 1px solid #DDD;
-    text-align:center;
-    vertical-align: middle;
-}
-
-td.tx {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    background: #FA5858;
-    background: url(tx.gif) center center no-repeat;
-    border: 1px solid #DDD;
-    text-align:center;
-    vertical-align: middle;
-}
-
 td.double {
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0em;
     font-size: 20px;
     background: #FA5858;
     background: url(double.png) center center no-repeat;
@@ -84,7 +61,7 @@ td.double {
 }
 
 td.denied {
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0em;
     font-size: 20px;
     background: #FA5858;
     background: url(accden.png) center center no-repeat;
@@ -93,22 +70,107 @@ td.denied {
     vertical-align: middle;
 }
 
-td.lastheard {
-    padding: 0.5em 0.5em;
-    width: 120px;
+td.ear {
+    padding: 0em;
+    width: 0px;
     text-align: center;
-    margin-left: 10px;
+    margin-left: 0px;
     background: url(ear.png) center center no-repeat;
-    background-position: right center;
+    background-position: center;
     transition: all 0.6s ease-in;    
 }
 
 td.logshow {
-    padding: 0.5em 0.5em;
+    padding: 0em;
     text-align: left;
     font-size: .8em;
+    width: 500px;
     background: linear-gradient(to left, transparent 50%, #1F7DE2 50%), linear-gradient(#F7f7f7, #EEE);
     background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all 0.6s ease-in;
+}
+
+.tooltip {
+    font-size: 1em;
+    position: relative;
+    display: inline-block;
+    padding: 0em;
+    text-align: center;
+    margin-left: 0px;
+    transition: all 0.6s ease-in;
+}
+.tooltip .tooltiptext {
+    font-size: 0.8em;
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    /* blending in */
+    opacity: 0;
+    transition: opacity 1s;
+    -webkit-transition: opacity 1s;
+    /* */
+    top: -5px;
+    left: 110%;
+}
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #555 transparent transparent;
+}
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+td.grey {
+    padding: 0.3em;
+    font-size: 1em;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, transparent 10%, #F3f3f3 80%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 100% 100%;
+    background-position: right bottom;
+    transition: all 0.6s ease-in;
+}
+td.green {
+    padding: 0.3em;
+    font-size: 1.2em;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, transparent 10%, #58FA58 80%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 100% 100%;
+    background-position: right bottom;
+}
+td.red {
+    padding: 0.3em;
+    font-size: 1.3em;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, transparent 10%, #FA5858 80%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 100% 100%;
+    background-position: right bottom;
+    transition: all 0.6s ease-in;
+}
+td.yellow {
+    padding: 0.3em;
+    font-size: 1.3em;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, transparent 10%, #F4FA58 80%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 100% 100%;
     background-position: right bottom;
     transition: all 0.6s ease-in;
 }
