--- a/style_normal.css
+++ b/style_normal.css
@@ -134,7 +134,16 @@ td.logshow {
     visibility: visible;
     opacity: 1;
 }
-
+td.darkgrey {
+    padding: 0.3em;
+    font-size: 1.2em;
+    text-align: center;
+    vertical-align: middle;
+    background: linear-gradient(to bottom, transparent 10%, #D8D8D8 80%), linear-gradient(#F7f7f7, #EEE);
+    background-size: 100% 100%;
+    background-position: right bottom;
+    transition: all 0.6s ease-in;
+}
 td.grey {
     padding: 0.3em;
     font-size: 1em;
