Move assets to subfolder

--- a/style_normal.css
+++ b/style_normal.css
@@ -28,7 +28,7 @@ td.tx {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(tx.gif) center center no-repeat;
+    background: url('assets/tx.gif') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -42,7 +42,7 @@ th.logline {
 th.led {
     padding: 0em;
     font-size: .8em;
-    background: url(led.png) center right no-repeat;
+    background: url('assets/led.png') center right no-repeat;
     padding: 2px 6px;
     border-collapse: separate;
     border: 1px solid #000;
@@ -54,7 +54,7 @@ td.double {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(double.png) center center no-repeat;
+    background: url('assets/double.png') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -64,7 +64,7 @@ td.denied {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(accden.png) center center no-repeat;
+    background: url('assets/accden.png') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -75,7 +75,7 @@ td.ear {
     width: 0px;
     text-align: center;
     margin-left: 0px;
-    background: url(ear.png) center center no-repeat;
+    background: url('assets/ear.png') center center no-repeat;
     background-position: center;
     transition: all 0.6s ease-in;
 }
